--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container-md p-4">
         <div class="row">
             <div class="col" >
-                <img src="./data/caracola.png" class="resize" id="image_caracola"
+                <img src="./caracola.png" class="resize" id="image_caracola"
                     onclick="clickCaracola()">
             </div>
         </div>
